--- a/backend/src/main/resources/templates/admin-home.html
+++ b/backend/src/main/resources/templates/admin-home.html
@@ -191,7 +191,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="inner-head">
-                    <h2>Phòng Trọ</h2>
+                    <h2>Bài Đăng</h2>
                 </div>
             </div>
         </div>
@@ -213,7 +213,7 @@
                         </div>
                         <div class="inner-bot">
                             <p><span th:text="${#numbers.formatDecimal(post.price, 0, 'COMMA', 0, 'POINT')}"></span>VND</p>
-                            <a th:href="@{/post/detail/{id}(id=${post.id})}" class="btn">Xem Phòng</a>
+                            <a th:href="@{/post/detail/{id}(id=${post.id})}" class="btn">Xem Bài</a>
                         </div>
                     </div>
                 </div>
@@ -235,7 +235,7 @@
             <div class="col-12">
                 <div class="inner-head text-center">
                     <h2 class="inner-title">
-                        Bình luận của khách hàng
+                        BÌNH LUẬN
                     </h2>
                 </div>
             </div>
