--- a/backend/src/main/resources/templates/home.html
+++ b/backend/src/main/resources/templates/home.html
@@ -175,8 +175,7 @@
     </div>
   </div>
 </div>
-<!-- End Intro -->
-<!-- Phòng trọ -->
+
 <div class="room-rent">
   <div class="container">
     <div class="row">
@@ -204,7 +203,7 @@
             </div>
             <div class="inner-bot">
               <p><span th:text="${#numbers.formatDecimal(post.price, 0, 'COMMA', 0, 'POINT')}"></span>VND</p>
-              <a th:href="@{/login}" class="btn">Xem Phòng</a>
+              <a th:href="@{/login}" class="btn">Xem Bài</a>
             </div>
           </div>
         </div>
