--- a/backend/src/main/resources/static/css/postdetail.css
+++ b/backend/src/main/resources/static/css/postdetail.css
@@ -95,6 +95,14 @@
     margin-bottom: 10px;
 }
 
+.pt .inner-center .inner-phone {
+    color: var(--color2);
+    margin-top: 20px;
+}
+
+
+
+
 .pt .inner-center .inner-head img {
     width: 100%;
     height: 500px;
