--- a/backend/src/main/resources/static/css/profile.css
+++ b/backend/src/main/resources/static/css/profile.css
@@ -224,6 +224,12 @@
     right: 8px;
 }
 
+.edit-button-wrapper {
+    position: absolute;
+    top: 14px;
+    right:40px;
+}
+
 .delete-button-wrapper button {
     background: none;
     border: none;
@@ -237,4 +243,42 @@
     color: #cc0000;
     transform: scale(1.1); /* Tăng kích thước nhẹ khi hover */
 }
+
+.chart-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 30px;
+}
+
+.chart-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px; /* Space between each chart */
+}
+
+.chart-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.user-statistics, .post-statistics, .comment-statistics {
+    text-align: center;
+    width: 300px;  /* Adjust the width of each section */
+    margin-bottom: 30px; /* Add space between sections */
+}
+
+#userChart {
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+#postChart, #commentChart {
+    margin-bottom: 30px; /* Space between the charts */
+}
+
+
 
