--- a/backend/src/main/resources/templates/post.html
+++ b/backend/src/main/resources/templates/post.html
@@ -100,6 +100,38 @@
 </header>
 <div class="container">
     <div class="post-container">
+        <h3 id="main-title">TÌM KIẾM PHÒNG TRỌ DỄ DÀNG</h3>
+        <form th:action="@{/post/search}" method="get">
+            <div class="form-group">
+                <select id="city" name="city" class="form-control">
+                    <option value="">-- Chọn tỉnh/thành phố --</option>
+                    <option th:each="city : ${cities}" th:value="${city}" th:text="${city}"></option>
+                </select>
+            </div>
+            <div class="form-group">
+                <select id="district" name="district" class="form-control">
+                    <option value="">-- Chọn quận/huyện --</option>
+                    <option th:each="district : ${districts}" th:value="${district}" th:text="${district}"></option>
+                </select>
+            </div>
+            <div class="form-group">
+                <select id="ward" name="ward" class="form-control">
+                    <option value="">-- Chọn xã/phường --</option>
+                    <option th:each="ward : ${wards}" th:value="${ward}" th:text="${ward}"></option>
+                </select>
+            </div>
+            <div class="form-group">
+                <select id="priceRange" name="priceRange" class="form-control">
+                    <option value="">-- Chọn khoảng giá --</option>
+                    <option value="0-1000000">Dưới 1 triệu</option>
+                    <option value="1000000-3000000">1 triệu - 3 triệu</option>
+                    <option value="3000000-5000000">3 triệu - 5 triệu</option>
+                    <option value="5000000-10000000">5 triệu - 10 triệu</option>
+                    <option value="10000000-0">Trên 10 triệu</option>
+                </select>
+            </div>
+            <button type="submit" class="btn btn-primary">Tìm kiếm</button>
+        </form>
         <a th:href="@{/post/create_post}" class="btn btn-primary" name="create">Đăng Bài</a>
         <div class="row">
             <div class="col-md-6 col-12" th:each="post : ${posts}">
@@ -115,7 +147,7 @@
                         </a>
                         <div class="inner-bot">
                             <p><span th:text="${#numbers.formatDecimal(post.price, 0, 'COMMA', 0, 'POINT')}"></span>VND</p>
-                            <a th:href="@{/post/detail/{id}(id=${post.id})}" class="btn">Xem Phòng</a>
+                            <a th:href="@{/post/detail/{id}(id=${post.id})}" class="btn">Xem Bài</a>
                         </div>
                     </div>
                 </div>
