--- a/backend/src/main/resources/templates/register.html
+++ b/backend/src/main/resources/templates/register.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css}"
           integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" th:href="/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" th:href="/css/base.css">
+    <link rel="stylesheet" th:href="@{/bootstrap/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/base.css}">
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="stylesheet" th:href="@{/css/register.css}">
     <script th:src="@{https://code.jquery.com/jquery-3.6.0.min.js}"></script>
@@ -24,26 +24,28 @@
                 <div class="inner-form">
                     <form th:action="@{/register}" method="post" class="form">
 
-                        <div th:if="${error1} or ${error2} or ${error3}" class="error-message">
+                        <div th:if="${error0} or ${error1} or ${error2} or ${error3}or ${error4}" class="error-message">
+                            <p th:if="${error0}" th:text="${error0}"></p>
                             <p th:if="${error1}" th:text="${error1}"></p>
                             <p th:if="${error2}" th:text="${error2}"></p>
                             <p th:if="${error3}" th:text="${error3}"></p>
+                            <p th:if="${error4}" th:text="${error4}"></p>
                         </div>
 
                         <label for="fullName">Họ Và Tên</label>
-                        <input type="text" name="fullName" id="fullName" class="form-control" required>
+                        <input type="text" name="fullName" id="fullName" class="form-control">
 
                         <label for="email">Email</label>
-                        <input type="text" name="email" id="email" class="form-control" required >
+                        <input type="text" name="email" id="email" class="form-control"  >
 
                         <label for="phone">Phone</label>
-                        <input type="text" name="phone" id="phone" class="form-control" required >
+                        <input type="text" name="phone" id="phone" class="form-control" >
 
                         <label for="password">Mật khẩu</label>
-                        <input type="password" name="password" id="password" class="form-control" required>
+                        <input type="password" name="password" id="password" class="form-control" >
 
                         <label for="confirmPassword">Nhập Lại Mật Khẩu</label>
-                        <input type="password" name="confirmPassword" id="confirmPassword" class="form-control" required>
+                        <input type="password" name="confirmPassword" id="confirmPassword" class="form-control" >
 
                         <button type="submit" class="btn-register">Đăng Ký</button>
                         <div class="inner-line"></div>
